CHW4_Report_Updated

--- a/Coding/HW4/Report/CHW4.tex
+++ b/Coding/HW4/Report/CHW4.tex
@@ -7,6 +7,7 @@
 \usepackage{url}
 \usepackage{float}
 \usepackage{caption}
+\usepackage{subcaption} % برای قرار دادن تصاویر کنار هم
 \usepackage{listings}
 \usepackage{xcolor}
 
@@ -22,140 +23,147 @@
 	
 	\maketitle
 	
-	\section{مقدمه و آماده‌سازی داده‌ها}
-	در این تکلیف، هدف پیاده‌سازی و ارزیابی ماشین بردار پشتیبان (\lr{SVM}) بر روی مجموعه داده \lr{Fashion-MNIST} است. این مجموعه داده شامل تصاویر $28 \times 28$ پیکسلی از پوشاک در $10$ کلاس مختلف است. به دلیل حجم بالای داده‌ها و محدودیت‌های محاسباتی در پیاده‌سازی دستی، از یک زیرمجموعه شامل $2000$ نمونه استفاده شد.
-	ابتدا داده‌ها بارگذاری شده و به طور تصادفی مخلوط (\lr{Shuffle}) شدند. سپس $20$ درصد از داده‌ها (معادل $400$ نمونه) به عنوان داده‌های آزمون (\lr{Test Set}) و $80$ درصد باقی‌مانده (معادل $1600$ نمونه) به عنوان داده‌های آموزش (\lr{Train Set}) جدا شدند. برای بهبود عملکرد الگوریتم‌های مبتنی بر گرادیان، داده‌ها نرمال‌سازی شدند تا میانگین صفر و واریانس یک داشته باشند.
+	\section{مقدمه}
+	در این تمرین، هدف پیاده‌سازی و ارزیابی الگوریتم ماشین بردار پشتیبان (\lr{Support Vector Machine - SVM}) برای طبقه‌بندی تصاویر مجموعه داده \lr{Fashion-MNIST} است. این کار در دو بخش انجام شده است: ابتدا پیاده‌سازی الگوریتم از پایه با استفاده از کتابخانه \lr{NumPy} و ریاضیات مربوط به مسئله دوگان (\lr{Dual Problem})، و سپس پیاده‌سازی با استفاده از کتابخانه \lr{Scikit-Learn} جهت اعتبارسنجی نتایج. در نهایت تاثیر پارامترهای مختلف مانند نوع کرنل و ضریب جریمه ($C$) بر دقت مدل بررسی شده است.
 	
-	\section{پیاده‌سازی مدل \lr{SVM} با استفاده از \lr{NumPy}}
-	در بخش اول، الگوریتم \lr{SVM} بدون استفاده از کتابخانه‌های آماده و صرفاً با استفاده از جبر خطی در \lr{NumPy} پیاده‌سازی شد.
+	\section{بخش اول: پیاده‌سازی SVM از پایه (NumPy)}
 	
-	\subsection{ریاضیات و منطق کلاس \lr{SVMScratch}}
-	این کلاس هسته اصلی الگوریتم را تشکیل می‌دهد و برای حل مسأله بهینه‌سازی \lr{SVM} از روش «گرادیان صعودی» (\lr{Gradient Ascent}) بر روی فرم دوگان (\lr{Dual Form}) استفاده می‌کند.
-	
-	\subsubsection{تابع \lr{\_kernel}}
-	این تابع وظیفه محاسبه ماتریس کرنل (شباهت بین نمونه‌ها) را بر عهده دارد. دو نوع کرنل پیاده‌سازی شد:
-	\begin{itemize}
-		\item \textbf{کرنل خطی (\lr{Linear}):} به صورت ضرب داخلی دو بردار ویژگی تعریف می‌شود:
+	\subsection{آماده‌سازی داده‌ها}
+	مجموعه داده \lr{Fashion-MNIST} شامل تصاویر سیاه‌وسفی $28 \times 28$ پیکسل از ۱۰ کلاس مختلف پوشاک است. در این پیاده‌سازی، مراحل زیر برای آماده‌سازی داده‌ها طی شد:
+	\begin{enumerate}
+		\item \textbf{بارگذاری و انتخاب زیرمجموعه:} به دلیل حجم بالای داده‌ها و هزینه محاسباتی بالای آموزش SVM (که با تعداد نمونه‌ها رابطه نمایی دارد)، پس از بارگذاری کل داده‌ها، آن‌ها به صورت تصادفی مخلوط (\lr{Shuffle}) شدند و یک زیرمجموعه شامل $2000$ نمونه انتخاب گردید.
+		\item \textbf{تقسیم داده‌ها:} داده‌ها با استفاده از روش \lr{Stratified Split} به دو بخش آموزش ($80\%$) و آزمون ($20\%$) تقسیم شدند تا توزیع کلاس‌ها در هر دو مجموعه حفظ شود.
+		\item \textbf{نرمال‌سازی (\lr{Standardization}):} از آنجا که SVM یک الگوریتم مبتنی بر فاصله است، مقیاس ویژگی‌ها تاثیر زیادی بر عملکرد آن دارد. تمام ویژگی‌ها با کسر میانگین و تقسیم بر انحراف معیار نرمال شدند:
 		\begin{equation}
-			K(x_i, x_j) = x_i^T x_j
+			X_{scaled} = \frac{X - \mu}{\sigma + \epsilon}
 		\end{equation}
-		\item \textbf{کرنل \lr{RBF}:} که بر اساس فاصله اقلیدسی عمل می‌کند و قابلیت جداسازی غیرخطی را فراهم می‌آورد:
+		که در آن $\epsilon$ مقدار بسیار کوچکی برای جلوگیری از تقسیم بر صفر است.
+	\end{enumerate}
+	
+	\subsection{ریاضیات و ساختار مدل}
+	الگوریتم پیاده‌سازی شده بر اساس حل مسئله دوگان لاگرانژ (\lr{Lagrange Dual Problem}) بنا شده است. هدف پیدا کردن ضرایب $\alpha$ است که تابع هدف زیر را ماکزیمم کنند:
+	
+	\begin{equation}
+		\max_{\alpha} \sum_{i=1}^{m} \alpha_i - \frac{1}{2} \sum_{i=1}^{m} \sum_{j=1}^{m} \alpha_i \alpha_j y_i y_j K(x_i, x_j)
+	\end{equation}
+	
+	تحت قیود:
+	\begin{equation}
+		0 \le \alpha_i \le C, \quad \forall i
+	\end{equation}
+	\begin{equation}
+		\sum_{i=1}^{m} \alpha_i y_i = 0
+	\end{equation}
+	
+	در کد نوشته شده، برای حل این مسئله بهینه‌سازی از روش گرادیان صعودی (\lr{Gradient Ascent}) استفاده شده است. گرادیان تابع هدف نسبت به بردار $\alpha$ به صورت زیر محاسبه می‌شود:
+	\begin{equation}
+		\nabla L(\alpha) = \mathbf{1} - y \odot (K \cdot (\alpha \odot y))
+	\end{equation}
+	که در آن $\odot$ ضرب درایه‌ای و $K$ ماتریس کرنل است. در هر تکرار، مقادیر $\alpha$ به‌روزرسانی شده و سپس جهت ارضای قید $0 \le \alpha \le C$، مقادیر آن به بازه $[0, C]$ محدود (\lr{Clip}) می‌شوند.
+	
+	\subsection{توابع کرنل (\lr{Kernel Functions})}
+	دو نوع کرنل در تابع \lr{\_kernel} پیاده‌سازی شد:
+	\begin{itemize}
+		\item \textbf{کرنل خطی (\lr{Linear}):}
 		\begin{equation}
-			K(x_i, x_j) = \exp(-\gamma ||x_i - x_j||^2)
+			K(x_1, x_2) = x_1 \cdot x_2^T
 		\end{equation}
+		\item \textbf{کرنل \lr{RBF} (توزیع گاوسی):}
+		\begin{equation}
+			K(x_1, x_2) = \exp(-\gamma ||x_1 - x_2||^2)
+		\end{equation}
+		که پارامتر $\gamma$ به صورت پیش‌فرض برابر با $\frac{1}{n\_features}$ در نظر گرفته شد.
 	\end{itemize}
 	
-	\subsubsection{تابع \lr{fit}}
-	این تابع ضرایب لاگرانژ ($\alpha$) را یاد می‌گیرد. هدف ما بیشینه‌سازی تابع هدف دوگان است:
+	\subsection{محاسبه بایاس ($b$) و تابع تصمیم}
+	پس از همگرایی گرادیان، بردارهای پشتیبان (\lr{Support Vectors}) شناسایی شدند (نقاطی که $\alpha_i > 0$). مقدار بایاس $b$ با میانگین‌گیری روی بردارهای پشتیبان محاسبه شد:
 	\begin{equation}
-		L(\alpha) = \sum_{i=1}^{n} \alpha_i - \frac{1}{2} \sum_{i=1}^{n} \sum_{j=1}^{n} \alpha_i \alpha_j y_i y_j K(x_i, x_j)
+		b = \frac{1}{N_{SV}} \sum_{s \in SV} (y_s - \sum_{i} \alpha_i y_i K(x_i, x_s))
 	\end{equation}
-	مشتق این تابع نسبت به $\alpha$ برابر است با:
+	تابع تصمیم نهایی برای یک داده ورودی جدید $x$ برابر است با:
 	\begin{equation}
-		\nabla L = 1 - y_i \sum_{j=1}^{n} \alpha_j y_j K(x_i, x_j)
+		f(x) = \text{sign}(\sum_{i} \alpha_i y_i K(x_i, x) + b)
 	\end{equation}
-	در حلقه یادگیری، مقادیر $\alpha$ با نرخ یادگیری (\lr{lr}) در جهت گرادیان به‌روزرسانی می‌شوند. همچنین شرط محدودیت جعبه‌ای ($0 \le \alpha \le C$) با استفاده از تابع \lr{clip} اعمال می‌شود. در نهایت، مقدار بایاس ($b$) با استفاده از بردارهای پشتیبان (نقاطی که $0 < \alpha < C$) محاسبه می‌شود.
 	
-	\subsubsection{تابع \lr{decision\_function}}
-	برای پیش‌بینی امتیاز یک نمونه جدید $x$، از رابطه زیر استفاده می‌شود:
-	\begin{equation}
-		f(x) = \sum_{i \in SV} \alpha_i y_i K(x_i, x) + b
-	\end{equation}
-	این مقدار نشان‌دهنده فاصله نمونه تا ابرصفحه جداکننده است.
+	\subsection{استراتژی چندکلاسه (\lr{One-vs-Rest})}
+	از آنجا که SVM ذاتا یک طبقه‌بند دودویی است، برای مجموعه داده \lr{Fashion-MNIST} که دارای ۱۰ کلاس است، از استراتژی «یکی در برابر همه» (\lr{One-vs-Rest}) استفاده شد. به این صورت که ۱۰ مدل مجزا آموزش داده شدند؛ در مدل $k$-ام، نمونه‌های کلاس $k$ برچسب $+1$ و سایر نمونه‌ها برچسب $-1$ گرفتند. برای پیش‌بینی نهایی، کلاسی انتخاب شد که بیشترین مقدار تابع تصمیم (امتیاز) را تولید کرد.
 	
-	\subsection{استراتژی چندکلاسه و ارزیابی}
-	از آنجا که \lr{SVM} ذاتاً یک طبقه‌بند باینری است، برای مسأله ۱۰ کلاسه از استراتژی «یکی در برابر بقیه» (\lr{One-vs-Rest}) در تابع \lr{train\_svm} استفاده شد. به ازای هر کلاس، یک مدل آموزش داده می‌شود که آن کلاس را $+1$ و سایرین را $-1$ در نظر می‌گیرد.
-	تابع \lr{predict} خروجی تمام ۱۰ مدل را دریافت کرده و کلاسی که بیشترین امتیاز (بیشترین فاصله مثبت از مرز تصمیم) را داشته باشد، به عنوان برچسب نهایی انتخاب می‌کند (\lr{argmax}).
+	\section{ارزیابی و بهینه‌سازی پارامترها}
+	جهت یافتن بهترین پارامترها، از روش اعتبارسنجی متقاطع ۱۰ لایه (\lr{10-Fold Cross-Validation}) روی داده‌های آموزشی استفاده شد. مقادیر مختلف پارامتر جریمه $C \in \{0.01, 0.1, 1, 10, 100\}$ برای هر دو کرنل خطی و \lr{RBF} مورد ارزیابی قرار گرفتند.
 	
-	\subsection{اعتبارسنجی متقاطع (\lr{Cross-Validation})}
-	برای انتخاب بهترین فراپارامترها، از روش $10$-\lr{Fold Cross-Validation} استفاده شد. تابع \lr{get\_k\_folds} داده‌های آموزش را به ۱۰ بخش مساوی تقسیم می‌کند. نتایج میانگین دقت برای مقادیر مختلف $C$ و کرنل‌ها به شرح زیر به دست آمد:
-	
+	\subsection{تحلیل نتایج پیاده‌سازی \lr{Scratch}}
+	همانطور که در نمودار سمت راست شکل \ref{fig:accuracy_comparison} مشاهده می‌شود:
 	\begin{itemize}
-		\item \textbf{کرنل خطی (\lr{Linear}):} همان‌طور که مشاهده می‌شود، دقت در تمامی مقادیر $C$ بسیار پایین (حدود $16\%$) است.
-		\begin{lstlisting}[basicstyle=\ttfamily\small, frame=single]
-			C=0.01 => 17.19% | C=0.1 => 14.75% | C=1 => 16.25% 
-			C=10 => 16.56%   | C=100 => 16.25%
-		\end{lstlisting}
-		\textbf{تحلیل عملکرد ضعیف خطی:} دلیل اصلی این عملکرد ضعیف در پیاده‌سازی دستی، ماهیت الگوریتم گرادیان صعودی ساده است. در فضای ویژگی‌های با ابعاد بالا ($784$ بعد)، سطح خطای کرنل خطی بسیار ناهموار است و الگوریتم گرادیان ساده بدون اعمال دقیق شرط تساوی ($\sum \alpha_i y_i = 0$) و بدون استفاده از روش‌های پیشرفته‌تر مانند \lr{SMO} یا \lr{Coordinate Descent}، نمی‌تواند همگرا شود و دچار نوسان می‌شود.
-		
-		\item \textbf{کرنل \lr{RBF}:} عملکرد بسیار بهتری نشان داد و با افزایش $C$ دقت بهبود یافت.
-		\begin{lstlisting}[basicstyle=\ttfamily\small, frame=single]
-			C=0.01 => 71.06% | C=0.1 => 76.50% | C=1 => 81.63%
-			C=10 => 83.06%   | C=100 => 83.06%
-		\end{lstlisting}
+		\item \textbf{کرنل خطی:} عملکرد بسیار ضعیفی داشت (دقت حدود $13\%$ تا $16\%$). این نشان می‌دهد که داده‌های تصویر پوشاک در فضای ویژگی اصلی به صورت خطی تفکیک‌پذیر نیستند.
+		\item \textbf{کرنل \lr{RBF}:} عملکرد بسیار بهتری نشان داد. با افزایش مقدار $C$، دقت مدل افزایش یافت و در مقادیر $C=10$ و $C=100$ به ثبات رسید (حدود $83\%$). این نشان می‌دهد که مدل با مرزهای غیرخطی و جریمه سخت‌گیرانه‌تر برای خطاهای طبقه‌بندی، بهتر عمل می‌کند.
 	\end{itemize}
 	
-	% محل قرارگیری تصویر اول
-	 \begin{figure}[H]
-		 	\centering
-		 	\includegraphics[width=0.8\textwidth]{numpy_results.png}
-		 	\caption{نمودار تغییرات دقت بر حسب مقدار C در پیاده‌سازی دستی (NumPy)}
-		 	\label{fig:numpy_results}
-		 \end{figure}
-	
-	\subsection{نتیجه نهایی مدل \lr{NumPy}}
-	بهترین پارامترهای یافت شده عبارتند از \lr{kernel='rbf'} و $C=10$ که دقت اعتبارسنجی $83.06\%$ را داشت. پس از آموزش مجدد مدل با این پارامترها روی کل داده‌های آموزش، دقت نهایی روی داده‌های آزمون برابر با \textbf{$81.61\%$} به دست آمد.
-	
-	\section{پیاده‌سازی با استفاده از \lr{Scikit-Learn}}
-	در این بخش از کتابخانه استاندارد \lr{sklearn} برای پیاده‌سازی استفاده شد که از حل‌گر قدرتمند \lr{LibSVM} استفاده می‌کند.
-	
-	\subsection{اجزای استفاده شده}
+	بهترین پارامترهای یافت شده عبارتند از:
 	\begin{itemize}
-		\item \textbf{\lr{StandardScaler}:} برای نرمال‌سازی داده‌ها (میانگین صفر و انحراف معیار یک) استفاده شد که تأثیر بسزایی در همگرایی \lr{SVM} دارد.
-		\item \textbf{\lr{OneVsRestClassifier}:} این کلاس به صورت خودکار استراتژی یکی در برابر بقیه را برای مسائل چندکلاسه مدیریت می‌کند.
-		\item \textbf{\lr{StratifiedKFold}:} برخلاف تقسیم تصادفی ساده، این روش تضمین می‌کند که نسبت کلاس‌ها در هر \lr{Fold} حفظ شود که برای داده‌های غیرمتوازن حیاتی است.
-		\item \textbf{\lr{GridSearchCV}:} جستجوی شبکه‌ای برای یافتن بهترین ترکیب فراپارامترها ($C$ و نوع کرنل) همراه با اعتبارسنجی متقاطع.
+		\item \textbf{کرنل:} \lr{rbf}
+		\item \textbf{مقدار $C$:} $10$
+		\item \textbf{دقت نهایی روی داده تست:} $82.62\%$
 	\end{itemize}
 	
-	\subsection{تحلیل نتایج \lr{Scikit-Learn}}
-	نتایج جستجوی شبکه‌ای نشان داد که پیاده‌سازی کتابخانه‌ای رفتار پایدارتری دارد. نمودار دقت بر حسب پارامتر $C$ در شکل زیر (در صورت فعال‌سازی) قابل مشاهده است. نکته قابل توجه این است که در پیاده‌سازی \lr{sklearn}، کرنل خطی نیز عملکرد قابل قبولی دارد، اما همچنان کرنل \lr{RBF} برتری دارد.
+	\section{بخش دوم: پیاده‌سازی با Scikit-Learn}
+	برای مقایسه، همین مراحل با استفاده از کلاس‌های \lr{SVC}، \lr{OneVsRestClassifier} و \lr{GridSearchCV} از کتابخانه \lr{Scikit-Learn} انجام شد.
+	نتایج حاصل از \lr{Scikit-Learn} تطابق بسیار بالایی با پیاده‌سازی دستی داشت که صحت عملکرد کد نوشته شده را تایید می‌کند. بهترین مدل در این حالت نیز کرنل \lr{RBF} با $C=10$ بود که دقتی برابر با $82.50\%$ روی داده‌های تست نهایی ثبت کرد.
 	
-	% محل قرارگیری تصویر دوم (یکی از دو تصویر مشابه مربوط به sklearn)
-	 \begin{figure}[H]
-		 	\centering
-		 	\includegraphics[width=0.8\textwidth]{sklearn_results.png}
-		 	\caption{نمودار تغییرات دقت بر حسب مقدار C در پیاده‌سازی Scikit-Learn}
-		 	\label{fig:sklearn_results}
-		 \end{figure}
+	\section{تحلیل نمودارها و مقایسه}
 	
-	بهترین مدل در این حالت نیز با پارامترهای $C=10$ و کرنل \lr{RBF} به دست آمد که دقت اعتبارسنجی آن $83.38\%$ بود. دقت نهایی روی داده‌های آزمون برابر با \textbf{$82.50\%$} شد.
-	
-	\section{مقایسه و نتیجه‌گیری}
-	مقایسه نتایج نهایی نشان می‌دهد که پیاده‌سازی دستی ما با وجود سادگی، عملکرد بسیار نزدیکی به کتابخانه بهینه‌شده \lr{Scikit-Learn} دارد ($81.61\%$ در مقابل $82.50\%$).
-	
-	\subsection{تحلیل گزارش کلاس‌بندی (\lr{Classification Report})}
-	با مقایسه گزارش‌های کلاس‌بندی هر دو مدل، نتایج زیر حاصل می‌شود:
-	\begin{itemize}
-		\item \textbf{کلاس‌های موفق:} هر دو مدل در تشخیص کلاس $1$ (شلوار) و کلاس $9$ (کفش ساق‌دار) بسیار عالی عمل کرده‌اند (دقت بالای $95\%$). این نشان می‌دهد ویژگی‌های این کلاس‌ها تمایز بالایی دارند.
-		\item \textbf{کلاس‌های چالش‌برانگیز:} کلاس $6$ (پیراهن) در هر دو مدل کمترین دقت را داشته است (\lr{Recall} حدود $0.55$). این کلاس به دلیل شباهت ظاهری زیاد به تی‌شرت (کلاس $0$) و پلوشرت (کلاس $2$)، بیشترین خطا را ایجاد کرده است.
-		\item \textbf{پایداری:} مدل \lr{Scikit-Learn} در کلاس‌های دشوار کمی متعادل‌تر عمل کرده است، اما الگوی خطاها در هر دو مدل یکسان است که نشان‌دهنده ماهیت داده‌هاست.
-	\end{itemize}
-	
-	در جدول زیر گزارش نهایی مدل \lr{Scikit-Learn} آورده شده است:
-	
-	\begin{table}[H]
+	\subsection{مقایسه روند دقت بر حسب $C$}
+	در شکل \ref{fig:accuracy_comparison} روند تغییرات دقت بر اساس پارامتر $C$ برای هر دو پیاده‌سازی نمایش داده شده است.
+	\begin{figure}[H]
 		\centering
-		\caption{گزارش کلاس‌بندی نهایی (بهترین مدل)}
-		\begin{latin}
-			\begin{tabular}{ccccc}
-				\toprule
-				\textbf{Class} & \textbf{Precision} & \textbf{Recall} & \textbf{F1-Score} & \textbf{Support} \\
-				\midrule
-				0 & 0.65 & 0.80 & 0.72 & 40 \\
-				1 & 1.00 & 0.93 & 0.96 & 40 \\
-				2 & 0.71 & 0.72 & 0.72 & 40 \\
-				3 & 0.88 & 0.70 & 0.78 & 40 \\
-				4 & 0.74 & 0.85 & 0.79 & 40 \\
-				5 & 0.92 & 0.88 & 0.90 & 40 \\
-				6 & 0.67 & 0.55 & 0.60 & 40 \\
-				7 & 0.95 & 0.90 & 0.92 & 40 \\
-				8 & 0.83 & 0.97 & 0.90 & 40 \\
-				9 & 0.97 & 0.95 & 0.96 & 40 \\
-				\midrule
-				\textbf{Accuracy} & & & \textbf{0.82} & 400 \\
-				\bottomrule
-			\end{tabular}
-		\end{latin}
-	\end{table}
+		\begin{subfigure}{0.48\textwidth}
+			\centering
+			 \includegraphics[width=\linewidth]{numpy_results.png}
+
+			\caption{پیاده‌سازی دستی (NumPy)}
+		\end{subfigure}
+		\hfill
+		\begin{subfigure}{0.48\textwidth}
+			\centering
+			 \includegraphics[width=\linewidth]{sklearn_results.png}
+
+			\caption{پیاده‌سازی Scikit-Learn}
+		\end{subfigure}
+		\caption{نمودار تغییرات دقت میانگین (Cross-Validation) بر حسب مقدار $C$ برای کرنل‌های خطی و RBF.}
+		\label{fig:accuracy_comparison}
+	\end{figure}
+	
+	در هر دو نمودار، کرنل \lr{RBF} (خط نارنجی در نمودار دستی و خط آبی در نمودار \lr{Sklearn}) با افزایش $C$ بهبود یافته و سپس اشباع می‌شود. تفاوت جزیی در نمودار خطی ممکن است ناشی از تفاوت در روش‌های بهینه‌سازی داخلی (\lr{Gradient Ascent} ساده در برابر \lr{LibSVM} بهینه شده) باشد.
+	
+	\subsection{ماتریس درهم‌ریختگی (\lr{Confusion Matrix})}
+	شکل \ref{fig:confusion_matrices} ماتریس درهم‌ریختگی مدل بهینه را برای هر دو روش نشان می‌دهد.
+	
+	\begin{figure}[H]
+		\centering
+		\begin{subfigure}{0.48\textwidth}
+			\centering
+			 \includegraphics[width=\linewidth]{confusion_matrix_numpy_results.png}
+
+			\caption{پیاده‌سازی دستی}
+		\end{subfigure}
+		\hfill
+		\begin{subfigure}{0.48\textwidth}
+			\centering
+			 \includegraphics[width=\linewidth]{confusion_matrix_sklearn_results.png}
+
+			\caption{پیاده‌سازی Scikit-Learn}
+		\end{subfigure}
+		\caption{ماتریس درهم‌ریختگی برای بهترین مدل انتخاب شده روی داده‌های تست.}
+		\label{fig:confusion_matrices}
+	\end{figure}
+	
+	تحلیل ماتریس درهم‌ریختگی نکات زیر را روشن می‌کند:
+	\begin{itemize}
+		\item کلاس ۶ (\lr{Shirt}) بیشترین نرخ خطا را دارد و اغلب با کلاس ۰ (\lr{T-shirt/Top})، کلاس ۲ (\lr{Pullover}) و کلاس ۴ (\lr{Coat}) اشتباه گرفته می‌شود. این خطا به دلیل شباهت ظاهری زیاد این دسته از پوشاک قابل انتظار است.
+		\item کلاس ۱ (\lr{Trouser}) و کلاس ۹ (\lr{Ankle boot}) بالاترین دقت تشخیص را دارند (حدود $94\%$ تا $98\%$) که نشان‌دهنده تمایز واضح ویژگی‌های آن‌ها نسبت به سایر کلاس‌هاست.
+		\item تطابق بالای مقادیر قطر اصلی در هر دو ماتریس نشان می‌دهد که پیاده‌سازی دستی به درستی توانسته است الگوهای موجود را مشابه با پیاده‌سازی استاندارد \lr{Scikit-Learn} فرا بگیرد.
+	\end{itemize}
+	
+	\section{نتیجه‌گیری}
+	در این تمرین، الگوریتم SVM با موفقیت پیاده‌سازی شد. نتایج نشان داد که برای داده‌های تصویری \lr{Fashion-MNIST}، استفاده از کرنل غیرخطی \lr{RBF} ضروری است. مدل دستی توانست به دقتی معادل $82.62\%$ دست یابد که با دقت $82.50\%$ حاصل از کتابخانه \lr{Scikit-Learn} قابل رقابت است.
 	
 \end{document}
